Add MPC compilers SoK reference

--- a/latex/references.bib
+++ b/latex/references.bib
@@ -104,3 +104,21 @@
   biburl    = {https://dblp.org/rec/bib/conf/ccs/Fuchsbauer19},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{DBLP:conf/sp/HastingsHNZ19,
+  author    = {Marcella Hastings and
+               Brett Hemenway and
+               Daniel Noble and
+               Steve Zdancewic},
+  title     = {SoK: General Purpose Compilers for Secure Multi-Party Computation},
+  booktitle = {2019 {IEEE} Symposium on Security and Privacy, {SP} 2019, San Francisco,
+               CA, USA, May 19-23, 2019},
+  pages     = {1220--1237},
+  year      = {2019},
+  crossref  = {DBLP:conf/sp/2019},
+  url       = {https://doi.org/10.1109/SP.2019.00028},
+  doi       = {10.1109/SP.2019.00028},
+  timestamp = {Wed, 16 Oct 2019 14:14:51 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/sp/HastingsHNZ19},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
